include_directories(util)

#file(GLOB_RECURSE GL_SOURCES gl/*.c)
SET(GL_SRC
    gl/array.c
    gl/blit.c
    gl/blend.c
    gl/buffers.c
    gl/build_info.c
    gl/debug.c
    gl/decompress.c
    gl/depth.c
    gl/directstate.c
    gl/drawing.c
    gl/enable.c
    gl/envvars.c
    gl/eval.c
    gl/face.c
    gl/fog.c
    gl/fpe.c
    gl/fpe_cache.c
    gl/fpe_shader.c
    gl/framebuffers.c
    gl/gl_lookup.c
    gl/getter.c
    gl/gl4es.c
    gl/glstate.c
    gl/hint.c
    gl/init.c
    gl/light.c
    gl/line.c
    gl/list.c
    gl/listdraw.c
    gl/listrl.c
    gl/loader.c
    gl/logs.c
    gl/matrix.c
    gl/matvec.c
    gl/oldprogram.c
    gl/pixel.c
    gl/planes.c
    gl/pointsprite.c
    gl/preproc.c
    gl/program.c
    gl/queries.c
    gl/raster.c
    gl/render.c
    gl/shader.c
    gl/shaderconv.c
    gl/shader_hacks.c
    gl/stack.c
    gl/stencil.c
    gl/string_utils.c
    gl/stubs.c
    gl/texenv.c
    gl/texgen.c
    gl/texture.c
    gl/uniform.c
    gl/vertexattrib.c
	gl/wrap/gl4eswraps.c
	gl/wrap/gles.c
	gl/wrap/glstub.c
	gl/math/matheval.c
    libnurbs/interface/incurveeval.cc
    libnurbs/interface/glsurfeval.cc
    libnurbs/interface/bezierPatch.cc
    libnurbs/interface/glinterface.cc
    libnurbs/interface/bezierPatchMesh.cc
    libnurbs/interface/glcurveval.cc
    libnurbs/interface/insurfeval.cc
    libnurbs/interface/glrenderer.cc
    libnurbs/interface/bezierEval.cc
    libnurbs/nurbtess/sampleMonoPoly.cc
    libnurbs/nurbtess/monoTriangulation.cc
    libnurbs/nurbtess/polyDBG.cc
    libnurbs/nurbtess/directedLine.cc
    libnurbs/nurbtess/sampledLine.cc
    libnurbs/nurbtess/sampleComp.cc
    libnurbs/nurbtess/monoChain.cc
    libnurbs/nurbtess/sampleCompBot.cc
    libnurbs/nurbtess/sampleCompRight.cc
    libnurbs/nurbtess/searchTree.cc
    libnurbs/nurbtess/polyUtil.cc
    libnurbs/nurbtess/partitionY.cc
    libnurbs/nurbtess/quicksort.cc
    libnurbs/nurbtess/sampleCompTop.cc
    libnurbs/nurbtess/primitiveStream.cc
    libnurbs/nurbtess/partitionX.cc
    libnurbs/nurbtess/monoPolyPart.cc
    libnurbs/nurbtess/gridWrap.cc
    libnurbs/nurbtess/rectBlock.cc
    libnurbs/internals/arc.cc
    libnurbs/internals/curvesub.cc
    libnurbs/internals/flistsorter.cc
    libnurbs/internals/patchlist.cc
    libnurbs/internals/tobezier.cc
    libnurbs/internals/slicer.cc
    libnurbs/internals/trimregion.cc
    libnurbs/internals/nurbstess.cc
    libnurbs/internals/basiccrveval.cc
    libnurbs/internals/mapdescv.cc
    libnurbs/internals/displaylist.cc
    libnurbs/internals/curve.cc
    libnurbs/internals/renderhints.cc
    libnurbs/internals/sorter.cc
    libnurbs/internals/reader.cc
    libnurbs/internals/intersect.cc
    libnurbs/internals/ccw.cc
    libnurbs/internals/knotvector.cc
    libnurbs/internals/mapdesc.cc
    libnurbs/internals/subdivider.cc
    libnurbs/internals/arctess.cc
    libnurbs/internals/basicsurfeval.cc
    libnurbs/internals/mycode.cc
    libnurbs/internals/quilt.cc
    libnurbs/internals/curvelist.cc
    libnurbs/internals/varray.cc
    libnurbs/internals/nurbsinterfac.cc
    libnurbs/internals/mesher.cc
    libnurbs/internals/bin.cc
    libnurbs/internals/monotonizer.cc
    libnurbs/internals/monoTriangulationBackend.cc
    libnurbs/internals/hull.cc
    libnurbs/internals/trimline.cc
    libnurbs/internals/splitarcs.cc
    libnurbs/internals/cachingeval.cc
    libnurbs/internals/trimvertpool.cc
    libnurbs/internals/dataTransform.cc
    libnurbs/internals/maplist.cc
    libnurbs/internals/patch.cc
    libnurbs/internals/arcsorter.cc
    libnurbs/internals/uarray.cc
    libnurbs/internals/coveandtiler.cc
    libnurbs/internals/bufpool.cc
    libnurbs/internals/flist.cc
    libnurbs/internals/backend.cc
    libtess/dict.c
    libtess/normal.c
    libtess/priorityq.c
    libtess/sweep.c
    libtess/geom.c
    libtess/memalloc.c
    libtess/render.c
    libtess/tessmono.c
    libtess/priorityq-heap.c
    libtess/tess.c
    libtess/mesh.c
    libutil/project.c
    libutil/mipmap.c
    libutil/error.c
    libutil/quad.c
    libutil/registry.c
    libutil/glue.c
)

SET(GL_H
    ../version.h
    gl/array.h
    gl/blend.h
    gl/blit.h
    gl/buffers.h
	gl/build_info.h
    gl/const.h
    gl/debug.h
    gl/decompress.h
    gl/defines.h
    gl/depth.h
    gl/directstate.h
    gl/envvars.h
    gl/eval.h
    gl/face.h
    gl/fog.h
    gl/fpe.h
    gl/fpe_shader.h
    gl/framebuffers.h
    gl/gl_lookup.h
    gl/gles.h
    gl/gl4es.h
    gl/glstate.h
    gl/hint.h
    gl/init.h
    gl/light.h
    gl/line.h
    gl/list.h
    gl/loader.h
    gl/logs.h
    gl/matrix.h
    gl/matvec.h
    gl/oldprogram.h
    gl/pixel.h
    gl/planes.h
    gl/pointsprite.h
    gl/preproc.h
    gl/program.h
    gl/queries.h
    gl/raster.h
    gl/render.h
    gl/shader.h
    gl/shaderconv.h
    gl/shader_hacks.h
    gl/stack.h
    gl/state.h
    gl/stencil.h
    gl/stb_dxt_104.h
    gl/string_utils.h
    gl/texenv.h
    gl/texgen.h
    gl/uniform.h
    gl/texture.h
    gl/vertexattrib.h
    gl/math/eval.h
    gl/wrap/gl4es.h
    gl/wrap/gles.h
    gl/wrap/stub.h
    libnurbs/interface/glrenderer.h
    libnurbs/interface/mystdio.h
    libnurbs/interface/glsurfeval.h
    libnurbs/interface/bezierEval.h
    libnurbs/interface/bezierPatch.h
    libnurbs/interface/glcurveval.h
    libnurbs/interface/glimports.h
    libnurbs/interface/bezierPatchMesh.h
    libnurbs/interface/mystdlib.h
    libnurbs/nurbtess/polyUtil.h
    libnurbs/nurbtess/mystdio.h
    libnurbs/nurbtess/gridWrap.h
    libnurbs/nurbtess/quicksort.h
    libnurbs/nurbtess/monoChain.h
    libnurbs/nurbtess/partitionY.h
    libnurbs/nurbtess/glimports.h
    libnurbs/nurbtess/monoPolyPart.h
    libnurbs/nurbtess/primitiveStream.h
    libnurbs/nurbtess/monoTriangulation.h
    libnurbs/nurbtess/sampleCompTop.h
    libnurbs/nurbtess/sampleCompBot.h
    libnurbs/nurbtess/partitionX.h
    libnurbs/nurbtess/sampleComp.h
    libnurbs/nurbtess/directedLine.h
    libnurbs/nurbtess/sampleCompRight.h
    libnurbs/nurbtess/zlassert.h
    libnurbs/nurbtess/mystdlib.h
    libnurbs/nurbtess/definitions.h
    libnurbs/nurbtess/rectBlock.h
    libnurbs/nurbtess/sampledLine.h
    libnurbs/nurbtess/sampleMonoPoly.h
    libnurbs/nurbtess/polyDBG.h
    libnurbs/nurbtess/searchTree.h
    libnurbs/internals/basicsurfeval.h
    libnurbs/internals/renderhints.h
    libnurbs/internals/gridline.h
    libnurbs/internals/monotonizer.h
    libnurbs/internals/reader.h
    libnurbs/internals/knotvector.h
    libnurbs/internals/cachingeval.h
    libnurbs/internals/hull.h
    libnurbs/internals/myassert.h
    libnurbs/internals/sorter.h
    libnurbs/internals/maplist.h
    libnurbs/internals/nurbsconsts.h
    libnurbs/internals/mystring.h
    libnurbs/internals/types.h
    libnurbs/internals/flist.h
    libnurbs/internals/backend.h
    libnurbs/internals/arctess.h
    libnurbs/internals/mesher.h
    libnurbs/internals/displaymode.h
    libnurbs/internals/gridvertex.h
    libnurbs/internals/arc.h
    libnurbs/internals/trimvertpool.h
    libnurbs/internals/displaylist.h
    libnurbs/internals/quilt.h
    libnurbs/internals/trimvertex.h
    libnurbs/internals/patchlist.h
    libnurbs/internals/simplemath.h
    libnurbs/internals/coveandtiler.h
    libnurbs/internals/uarray.h
    libnurbs/internals/defines.h
    libnurbs/internals/curve.h
    libnurbs/internals/mymath.h
    libnurbs/internals/jarcloc.h
    libnurbs/internals/dataTransform.h
    libnurbs/internals/bufpool.h
    libnurbs/internals/arcsorter.h
    libnurbs/internals/trimregion.h
    libnurbs/internals/mapdesc.h
    libnurbs/internals/pwlarc.h
    libnurbs/internals/gridtrimvertex.h
    libnurbs/internals/mysetjmp.h
    libnurbs/internals/patch.h
    libnurbs/internals/subdivider.h
    libnurbs/internals/slicer.h
    libnurbs/internals/varray.h
    libnurbs/internals/flistsorter.h
    libnurbs/internals/basiccrveval.h
    libnurbs/internals/nurbstess.h
    libnurbs/internals/trimline.h
    libnurbs/internals/bezierarc.h
    libnurbs/internals/curvelist.h
    libnurbs/internals/bin.h
    libtess/tess.h
    libtess/priorityq-heap.h
    libtess/dict-list.h
    libtess/mesh.h
    libtess/priorityq-sort.h
    libtess/dict.h
    libtess/normal.h
    libtess/priorityq.h
    libtess/sweep.h
    libtess/tessmono.h
    libtess/render.h
    libtess/memalloc.h
    libtess/geom.h
    libutil/gluint.h
)

set_source_files_properties(gl/build_info.c PROPERTIES OBJECT_OUTPUTS "dummy.c")

if(${CMAKE_SYSTEM_NAME} MATCHES "Linux" AND NOT NO_LOADER)
    include_directories(glx)
#    aux_source_directory(glx GLX_SOURCES)
#    list(APPEND GL_SOURCES ${GLX_SOURCES})
    list(APPEND GL_SRC
        glx/hardext.c
        glx/gbm.c
	    glx/glx.c
	    glx/lookup.c
        glx/rpi.c
	    glx/streaming.c
        glx/utils.c
    )
    list(APPEND GL_H
        glx/glx_gbm.h
        glx/gbmfunc.h
        glx/drmfunc.h
        glx/glx.h
        glx/hardext.h
        glx/rpi.h
        glx/streaming.h
        glx/utils.h
    )
else()
    include_directories(glx)
    list(APPEND GL_SRC
        glx/hardext.c
    )
    message(STATUS "Not on Linux: building without GLX support.")
endif()

if(${CMAKE_SYSTEM_NAME} MATCHES "Android")
    include_directories(agl)
    list(APPEND GL_SRC
        glx/gbm.c
        glx/glx.c
        glx/lookup.c
        glx/streaming.c
    )
    include_directories(..)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99 -funwind-tables -O3 -fvisibility=hidden -include include/android_debug.h")
endif()

if(AMIGAOS4)
    include_directories(agl)
    list(APPEND GL_SRC
        glx/gbm.c
        glx/glx.c
        agl/lookup.c
        agl/amigaos.c
        agl/agl.c
    )
    list(APPEND GL_H
        glx/hardext.h
        glx/glx.h
        agl/amigaos.h
        agl/agl.h
    )
endif()

if(STATICLIB)
add_library(GL STATIC ${GL_SRC})
else()
    add_library(GL SHARED ${GL_SRC})
    
    if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
        if(NOX11)
            if(AMIGAOS4)
                target_link_libraries(GL m)
            else()
                target_link_libraries(GL m dl)
            endif()
        else()
            target_link_libraries(GL X11 m dl)
        endif()
    endif()
    if(USE_CLOCK)
        target_link_libraries(GL rt)
    endif()
    
    if(CMAKE_SHARED_LIBRARY_SUFFIX MATCHES ".so")
        set_target_properties(GL PROPERTIES SUFFIX ".so.1")
    endif()
endif()
